welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:23: error: value Yellow is not a member of object java.awt.Color
	setCouleurBrosse(Color.Yellow)
                               ^